// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Breadcrumb snapshot 1`] = `
<ol
  className="breadcrumb"
/>
`;

exports[`ListGroup with listGroupItems.length == 1 snapshot 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    Item 1
  </li>
</ol>
`;

exports[`ListGroup with listGroupItems.length > 1 snapshot 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    Item 1
  </li>
  <li
    className="breadcrumb-item"
  >
    Item 2
  </li>
</ol>
`;
